# esk8pal-device

./: .clang-format  .cproject  .gitmodules  .project  CMakeLists.txt  Makefile  README.md  sdkconfig
main/: CMakeLists.txt  activity_detector.c  activity_detector.h  component.mk  gatt.c  gatt.h  gps.c  gps.h  http_server.c  http_server.h  location_service.c  location_service.h  logger.c  logger.cpp  logger.h  main.c  main.cpp  power.c  power.h  profile_battery.c  profile_battery.h  service_battery.c  service_battery.h  service_location.c  service_location.h  service_settings.c  service_settings.h  service_state.c  service_state.h  settings.c  settings.h  state.c  state.cpp  state.h  uploader.c  uploader.h  wifi.c  wifi.h
main/ds3231/: ds3231.c  ds3231.h
